Add header and add style

--- a/src/sass/edit/_typography.scss
+++ b/src/sass/edit/_typography.scss
@@ -22,3 +22,9 @@
   font-weight: $font-semibold;
   text-transform: uppercase;
 }
+
+.h5 {
+  font-size: 12px;
+  font-weight: $font-semibold;
+  text-transform: uppercase;
+}
