--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,7 +3,7 @@
 @import 'edit/settings';
 @import 'edit/global';
 @import 'edit/typography';
-
+@import 'edit/header';
 
 @import "bootstrap/functions";
 @import "bootstrap/variables";
