--- a/src/sass/edit/_header.scss
+++ b/src/sass/edit/_header.scss
@@ -82,7 +82,7 @@
       position: absolute;
       content: '';
       left: 50%;
-      width: 250px;
+      width: 40vh;
       height: 2px;
       transform: translateX(-50%);
       margin-top: 34px;
@@ -103,14 +103,18 @@
   text-align: center;
   text-decoration: none;
   border: none;
+  margin-bottom: 5vh;
   filter: invert(100%);
   cursor: pointer;
   transition: 1s;
 
-  h4 {
+  span {
     margin: 0 0 15px 0;
     letter-spacing: 6px;
     font-weight: $font-regular;
+    font-size: 18px;
+    text-transform: uppercase;
+    display: flex;
   }
 
   img {
