Add about section and footer, add style

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,7 +11,10 @@
 @import "bootstrap/utilities/api";
 
 @import 'edit/settings';
+@import 'edit/mixins';
 @import 'edit/global';
 @import 'edit/typography';
 @import 'edit/header';
 @import 'edit/gallery';
+@import 'edit/about';
+@import 'edit/footer';
