--- a/src/sass/edit/_header.scss
+++ b/src/sass/edit/_header.scss
@@ -1,124 +1,81 @@
 .header {
-  width: 100%;
-  height: 100vh;
-  position: relative;
-  background-color: $color-dark;
-  z-index: 0;
-
+  @include section-background-relative;
+  
   &__background {
-    position: absolute;
-    opacity: 0.4;
-    height: 100vh;
-    width: 100%;
-    object-fit: cover;
-    z-index: -1;
+    @include section-background-absolute;
+  }
+
+  &__wrapper {
+    text-align: left;
   }
 
   .container {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .logo {
-    color: $color-light;
-    text-transform: uppercase;
-    letter-spacing: 5px;
-
-    h4 {
-      margin-bottom: 0;
-    }
-
-    h5 {
-      margin-top: 0;
-    }
-  }
-
-  .nav__wrapper {
-    font-size: 16px;
-
-    a {
-      text-decoration: none;
-      text-transform: uppercase;
-      color: $color-grey;
-      margin-right: 24px;
-      font-weight: $font-regular;
-    }
+    @include container-settings;
   }
 }
 
 .row {
   align-items: center;
-
   &__title {
     flex: 2;
   }
+}
 
-  .header__wrapper {
-    text-align: left;
+.logo {
+  color: $color-light;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+
+  &__title {
+    margin-bottom: 0;
   }
 
-  .nav__wrapper {
-    text-align: right;
-  }
-
-  .title__wrapper {
-    text-align: center;
-
-    h1 {
-      color: $color-main;
-      margin: 0;
-      line-height: 1.1;
-      letter-spacing: 14px;
-      padding-left: 250px;
-
-      &:first-child {
-        text-align: left;
-        padding-left: 350px;
-      }
-    }
-
-    &::after{
-      position: absolute;
-      content: '';
-      left: 50%;
-      width: 40vh;
-      height: 2px;
-      transform: translateX(-50%);
-      margin-top: 34px;
-      background: $color-main; 
-    }
-  }
-
-  .button__wrapper {
-    display: flex;
-    justify-content: center;
+  &__subtitle {
+    margin-top: 0;
   }
 }
 
+.nav__wrapper {
+  font-size: 16px;
+  text-align: right;
 
-.btn {
-  display: inline-block;
-  background-color: transparent;
-  text-align: center;
-  text-decoration: none;
-  border: none;
-  margin-bottom: 5vh;
-  filter: invert(100%);
-  cursor: pointer;
-  transition: 1s;
-
-  span {
-    margin: 0 0 15px 0;
-    letter-spacing: 6px;
-    font-weight: $font-regular;
-    font-size: 18px;
+  a {
+    text-decoration: none;
     text-transform: uppercase;
-    display: flex;
+    color: $color-grey;
+    margin-right: 24px;
+    font-weight: $font-regular;
+  }
+}
+
+.title__wrapper {
+  text-align: center;
+
+  h1 {
+    color: $color-main;
+    margin: 0;
+    line-height: 1.1;
+    letter-spacing: 14px;
+
+    &:first-child {
+      text-align: left;
+      padding-left: 200px;
+    }
   }
 
-  img {
-    height: 50px;
-    width: 50px;
+  &::after{
+    @include title-bar;
+    width: 40vh;
+    height: 5px;
+    margin-top: 34px;
   }
+}
+
+.button__wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.btn-one {
+  @include button;
 }
