--- a/src/sass/edit/_about.scss
+++ b/src/sass/edit/_about.scss
@@ -1,28 +1,22 @@
-.about {
+#home__about {
   @include section-background-relative;
-
-  &__title{
-    @include section-title;
-
-    &::after{
-      @include title-bar;
-    }
-  }
-
-  &__background {
+  
+  .home__about--background {
     @include section-background-absolute;
   }
-
+    
   .container {
     @include container-settings;
   }
 
   .row {
     justify-content: center;
+    align-items: flex-start;
+    height: 100vh;
   }
 
-  .text__wrapper{
-    max-width: 55vw;
+  .text__wrapper {
+    max-width: fit-content;
   }
 
   p {
@@ -32,7 +26,7 @@
     color: $color-light;
     line-height: 1.4;
     letter-spacing: 2px;
-    margin-top: 5vh;
+    margin: 5% 0 0;
 
     &:last-child {
       text-align: right;
