--- a/src/sass/edit/_global.scss
+++ b/src/sass/edit/_global.scss
@@ -1,4 +1,6 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -15,4 +17,22 @@ body {
   max-width: 1140px;
   padding: 0 36px;
   margin: 0 auto;
+}
+
+.section__title{ 
+  @include section-title;
+
+  &::after{
+    @include title-bar;
+  }
+}
+
+#pages {
+  > * {
+    display: none;
+  }
+
+  > .active {
+    display: block;
+  }
 }
