--- a/src/sass/edit/_header.scss
+++ b/src/sass/edit/_header.scss
@@ -1,50 +1,23 @@
 .header {
   @include section-background-relative;
-  
+
   &__background {
     @include section-background-absolute;
   }
 
-  &__wrapper {
-    text-align: left;
-  }
-
   .container {
-    @include container-settings;
+    @extend .container;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
   }
 }
 
 .row {
   align-items: center;
+
   &__title {
     flex: 2;
-  }
-}
-
-.logo {
-  color: $color-light;
-  text-transform: uppercase;
-  letter-spacing: 5px;
-
-  &__title {
-    margin-bottom: 0;
-  }
-
-  &__subtitle {
-    margin-top: 0;
-  }
-}
-
-.nav__wrapper {
-  font-size: 16px;
-  text-align: right;
-
-  a {
-    text-decoration: none;
-    text-transform: uppercase;
-    color: $color-grey;
-    margin-right: 24px;
-    font-weight: $font-regular;
   }
 }
 
@@ -59,14 +32,12 @@
 
     &:first-child {
       text-align: left;
-      padding-left: 200px;
     }
   }
 
   &::after{
     @include title-bar;
-    width: 40vh;
-    height: 5px;
+    width: 20vw;
     margin-top: 34px;
   }
 }
