--- a/src/sass/edit/_products.scss
+++ b/src/sass/edit/_products.scss
@@ -1,22 +1,15 @@
-.gallery{
-  margin-bottom: 10vh;
-
-  &__title{
-    @include section-title;
-
-    &::after{
-      @include title-bar;
-    }
-  }
-}
-
 .product__wrapper {
   display: flex;
   justify-content: space-around;
-  margin-top: 5%;
-  
+  align-items: center;
+  margin: 10vh 0;
+
   &.reverse {
     flex-direction: row-reverse;
+  }
+
+  &:last-child {
+    margin-bottom: 10vh;
   }
 }
 
@@ -38,10 +31,11 @@
     margin: 0 0 7% 0;
 
     &::before {
-      @include title-bar-gallery;
+      @include title-bar-section;
+      width: 154px;
     }
   }
-
+    
   .product__roasting,
   .product__intensity {
     font-size: 18px;
@@ -51,6 +45,7 @@
       color: $color-main;
     }
   }
+
   .most-popular::after {
     @include icon-most-popular;
   }
@@ -64,5 +59,5 @@
     width: 100%;
     object-fit: cover;
     box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px;
-  } 
+  }
 }
