--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,6 +15,6 @@
 @import 'edit/global';
 @import 'edit/typography';
 @import 'edit/header';
-@import 'edit/gallery';
+@import 'edit/products';
 @import 'edit/about';
 @import 'edit/footer';
