--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,7 +15,9 @@
 @import 'edit/global';
 @import 'edit/typography';
 @import 'edit/header';
+@import 'edit/navbar';
 @import 'edit/products';
 @import 'edit/about';
 @import 'edit/contact';
 @import 'edit/footer';
+@import 'edit/media';
